# pingcap-talent-plan

./: .gitignore  .travis.yml  Cargo.toml  README.md  aliases.js  index.html  search-index.js  settings.html  source-files.js
building-blocks2/: Cargo.toml
building_blocks2/: all.html  index.html
docs/: aliases.js  search-index.js  settings.html  source-files.js
docs/kvs/: all.html  index.html  sidebar-items.js  struct.KvStore.html
implementors/failure/: trait.Fail.js
implementors/kvs/: trait.KvsEngine.js
kvs/: all.html  enum.KvsError.html  index.html  sidebar-items.js  struct.KvStore.html  struct.KvStorePingCap.html  struct.KvsClient.html  struct.KvsServer.html  struct.SledKvsEngine.html  trait.KvsEngine.html  type.Result.html
kvs/client/: struct.KvsClient.html
kvs/engines/: trait.KvsEngine.html
kvs/error/: enum.KvsError.html  type.Result.html
kvs/server/: struct.KvsServer.html
kvs_client/: all.html  index.html
kvs_server/: all.html  index.html
project-1/: Cargo.toml  README.md
project-1/src/: lib.rs  store.rs
project-2.1-one-file-no-compaction/: Cargo.toml
project-2.1-one-file-no-compaction/src/: error.rs  lib.rs
project-2.2-multi-files-no-compation/: Cargo.toml
project-2.2-multi-files-no-compation/src/: error.rs  store.rs
project-2.2-multi-files-no-compation/tests/: tests.rs
project-2/src/: error.rs  lib.rs  store.rs
project-2/tests/: tests.rs
project-3/: Cargo.toml
project-3/benches/: engine_bench.rs
project-3/src/: error.rs  lib.rs
src/building_blocks2/: main.rs.html
src/kvs/: client.rs.html  common.rs.html  (+3 more)
(+34 files in other folders)
