[package]
name = "kvs"
version = "0.1.0"
authors = ["Fuyang Liu <fuyangl@spotify.com>"]
description = "A key-value store"
edition = "2018"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false

[dependencies]
clap = {version = "2.33", features = ["yaml"]}

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
